# numina-restapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  fly.worker.toml  pyproject.toml  recreate_tables.py  requirements-dev.txt  requirements.txt  test_mbti_scoring.py
.github/workflows/: deploy.yml  fly-deploy.yml
alembic/: env.py
alembic/versions/: 20250216_0000_001_add_auth_to_users.py  20250216_1200_002_user_profile_columns.py  20250216_1300_003_test_results.py  20250218_0000_004_birth_fields_separate.py  20250220_0000_005_birth_place_coords_timezone.py  20250222_0000_006_test_results_narrative.py  20250303_0000_007_full_name_extracted_json.py  20250303_0000_008_llm_result_and_synthesis.py  20250303_0001_009_email_logs_table.py  20250303_0002_010_user_life_path_number.py  20250307_0000_011_user_mbti_strongest_chakra.py  20250307_0000_012_user_numerology_numbers.py  20250307_0000_013_drop_user_birthday_number.py  20260311_1403_1c54843cf28f_add_blueprint_fields_to_user.py  20260311_2123_b3bb49408c6c_add_astrology_blueprint_to_user.py  20260402_0947_4fc1f7c9f584_add_birthday_number_to_users_table.py  20260405_2030_017_synthesis_input_json.py  20260415_2226_5ec54feebbe4_add_most_sure_things_and_daily_message_.py  20260419_2025_4aa8bcf74aee_add_soul_snapshot.py  20260419_2230_e4259d399410_convert_cosmic_traits_summary_to_jsonb.py  ghost_3db9bb291072.py
app/: __init__.py  main.py
app/constants/: __init__.py  human_design_maps.py  questions.py  synthesis.py  test_questions.py  tests.py
app/core/: config.py  dependencies.py  email.py  exceptions.py  prompts.py  pubsub.py  queue.py  redis.py  security.py
app/db/: seed.py  session.py
app/domain/: user.py
app/schemas/: admin.py  auth.py  daily_message.py  subscription.py  synthesis.py  test_result.py  user.py
scripts/: test_worker_refactor.py
(+55 files in other folders)
