[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend rest api for numina ai"
authors = ["Abenezer Tesfaye <abenidevworking@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
pydantic-settings = ">=2.12.0,<3.0.0"
email-validator = ">=2.0.0,<3.0.0"
sqlalchemy = ">=2.0.46,<3.0.0"
asyncpg = ">=0.31.0,<0.32.0"
alembic = ">=1.18.2,<2.0.0"
pyjwt = ">=2.9.0,<3.0.0"
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
redis = ">=4.5.0,<6"
stripe = ">=14.3.0,<15.0.0"
arq = ">=0.26.0,<0.28.0"
openai = ">=1.0.0,<2.0.0"
httpx = ">=0.27.0,<0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
black = ">=26.1.0,<27.0.0"
ruff = ">=0.14.14,<0.15.0"

[project]
name = "backend"
version = "0.1.0"
description = "Backend rest api for numina ai"
authors = [
    {name = "Abenezer Tesfaye",email = "abenidevworking@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.2,<2.0.0)",
    "pyjwt (>=2.9.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=4.5.0,<6)",
    "stripe (>=14.3.0,<15.0.0)",
    "arq (>=0.26.0,<0.28.0)",
    "openai (>=1.0.0,<2.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]